fixed alignment and minor changes

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -105,7 +105,7 @@ html {
     TITLES
 ================================================================== */
 
-.franklin-content h1 { font-size: 24px; }
+.franklin-content h1 { font-size: 30px; }
 .franklin-content h2 { font-size: 22px; }
 .franklin-content h3 { font-size: 20px; }
 
