--- a/_css/poole_hyde.css
+++ b/_css/poole_hyde.css
@@ -327,13 +327,13 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 2rem;
+  padding-bottom: rem;
 }
 
 @media (min-width: 768px) {
   .content {
-    max-width: 45rem;
+    max-width: 100rem;
     margin-left: 15rem;
     margin-right: 0rem;
   }
